# MotionLab

./: .gitignore  CMakeLists.txt  README.md  README_EN.md
include/: auto_tracker.h  file_utils.h  lang.h  resources.h  theme.h  tracking.h  ui_action.h  ui_canvas.h  ui_core.h  ui_graph.h  ui_input.h  ui_menu.h  ui_panels.h  ui_table.h  video_engine.h
src/: auto_tracker.cpp  file_utils.c  lang.c  main.c  tracking.c  ui_action.c  ui_canvas.c  ui_core.c  ui_graph.c  ui_input.c  ui_menu.c  ui_panels.c  ui_table.c  video_engine.c
